--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,7 @@
             <a href="productos.html">Productos</a>
             <a href="somos.html">Quienes somos</a>
             <a href="contacto.html">Contacto</a>
+            <a href="promociones.html">Promociones</a> 
         </nav>
     </header>
 
@@ -35,6 +36,13 @@
         </section>
 
     </main>
+
+    <hr>
+    <footer class="pie-pagina">
+        <div class="footer-contenido">
+            <p>2025 Relojeria Ayres. Todos los derechos reservados | Local 10 - Galeria Paseo de UADE</p>
+        </div>
+    </footer>
 
 
 
