--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@
             <a href="productos.html">Productos</a>
             <a href="somos.html">Quienes somos</a>
             <a href="contacto.html">Contacto</a>
+            <a href="promociones.html">Promociones</a> 
         </nav>
     </header>
 
     <main class="principal">
          <img src="images/portada.jpg" alt="Imagen del local comercial" class="imagen-grande">
     </main>
+
+
+    <hr>
+    <footer class="pie-pagina">
+        <div class="footer-contenido">
+            <p>2025 Relojeria Ayres. Todos los derechos reservados | Local 10 - Galeria Paseo de UADE</p>
+        </div>
+    </footer>
 
 
 
