--- a/somos.html
+++ b/somos.html
@@ -16,11 +16,13 @@
             <a href="productos.html">Productos</a>
             <a href="somos.html">Quienes somos</a>
             <a href="contacto.html">Contacto</a>
+            <a href="promociones.html">Promociones</a> 
         </nav>
     </header>
 
     <main class="principal">
             <div class="somos">
+                <h4>Quienes somos?</h4>
                 <h4>Mas de 30 años de experiencia en el rubro!</h4>      
                 <p>Mantenimiento y reparacion profesional de relojes analogicos y digitales.</p>
                 <p>Un hobby devenido en un negocio familiar, manteniendo la calidad desde hace mas de 30 años.</p>  
@@ -31,11 +33,12 @@
                     <img src="images/relojes.jpg" alt="Varidad de relojes" class="imagen-chica">      
                 </div>
 
-
-        </div>
-         
-
-         </div>
+                <hr>
+                <footer class="pie-pagina">
+                    <div class="footer-contenido">
+                        <p>2025 Relojeria Ayres. Todos los derechos reservados | Local 10 - Galeria Paseo de UADE</p>
+                    </div>
+                </footer>
 
     </main>
 
